--- a/mobile/src/main/res/layout/activity_my.xml
+++ b/mobile/src/main/res/layout/activity_my.xml
@@ -165,23 +165,6 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
 
-            <!--<EditText-->
-                <!--android:id="@+id/phone"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="0dp"-->
-                <!--android:layout_weight="1"-->
-                <!--android:inputType="phone"-->
-                <!--android:focusable="false"-->
-                <!--android:focusableInTouchMode="false" />-->
-
-            <Button
-                android:id="@+id/keyboard"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:text="Open KB"
-                android:onClick="openKeyboard"/>
-
             <Button
                 android:id="@+id/save"
                 android:layout_height="0dp"
@@ -197,10 +180,10 @@
         android:id="@+id/draw"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="9"
         android:background="#ffc9c9c9"/>
 
-    <LinearLayout
+   <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1.25"
@@ -347,6 +330,5 @@
             android:background="#ffc9c9c9"
             android:textSize="20dp"
             android:textStyle="bold" />
-        </LinearLayout>
+    </LinearLayout>-->
 </LinearLayout>
-<!--</RelativeLayout>-->
