--- a/mobile/src/main/res/layout/activity_my.xml
+++ b/mobile/src/main/res/layout/activity_my.xml
@@ -5,12 +5,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".MyActivity"
-        tools:deviceIds="wear_square"
-        android:weightSum="12">
+        tools:deviceIds="wear_square">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:orientation="horizontal"
         android:weightSum="12">
         <LinearLayout
@@ -166,169 +165,31 @@
                 android:layout_weight="1"/>
 
             <Button
-                android:id="@+id/save"
+                android:id="@+id/excel_button"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:text="Save Excel"
-                android:onClick="saveExcel"/>
+                android:text="Open Excel"
+                android:onClick="excelManager"/>
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/guess_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:password="false"
+        android:textSize="28sp" />
 
     <ImageView
         android:id="@+id/draw"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
+        android:layout_weight="16"
         android:background="#ffc9c9c9"/>
 
-   <!-- <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:orientation="horizontal"
-        android:weightSum="7"
-        android:gravity="center_horizontal">
-
-        <TextView
-            android:text="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-        <TextView
-            android:text="2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-        <TextView
-            android:text="3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:orientation="horizontal"
-        android:weightSum="7"
-        android:gravity="center_horizontal">
-
-        <TextView
-            android:text="4"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-        <TextView
-            android:text="5"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-        <TextView
-            android:text="6"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:orientation="horizontal"
-        android:weightSum="7"
-        android:gravity="center_horizontal">
-
-        <TextView
-            android:text="7"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-        <TextView
-            android:text="8"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-        <TextView
-            android:text="9"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:orientation="horizontal"
-        android:weightSum="7"
-        android:gravity="center_horizontal">
-
-        <TextView
-            android:text="0"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:background="#ffc9c9c9"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-    </LinearLayout>-->
 </LinearLayout>
